@@ -200,7 +200,9 @@ if (isActionAccessible($guid, $connection2, '/modules/Planner/units_edit_working
 
     }
 
-    $form->addRow()->addSubmit();
+    $row = $form->addRow();
+    $row->addCheckbox('lessonNameReplace')->setValue('Y')->alignLeft()->description(__('Replace the lesson name with the smart block name?'));
+    $row->addSubmit();
 
     echo $form->getOutput();
 
